class_datos.py
    - Terminar implementación del tipo 'cordenadas_exponenciales'.
    - Normalizar vector eje en la toma general de datos, dar la opcion de elegir entre ['x','y','z','g'] -> 'g' Irse por 'vector'
        - Cambiar en ejercicios.py

class_helicoidaes.py
    - ¿Es necesario usar el nuevo tipo de dato 'cordenadas_exponenciales'?
    [x] - Rehacher calcular_M().

ejercicio.py
!   - Queda por implementar encontrar T con los datos del robot y una lista generada de angulos.

class_tr.py
    - [Stoped] Viendo si es workfit.

T4
    - Configuraciones singulares.

P1
    [X] - Crear archivo .yaml para el brazo del laboratorio.